<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My_App_235838530_CP670</string>
    <string name="hello_msg">Hello world!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="logout">Log out</string>
    <string name="pass">password</string>
    <string name="ok">Yes</string>
    <string name="cancel">No\n</string>
    <string name="dialog_title">End Activity?</string>
    <string name="dialog_message">Press yes to return to login, no to stay in item list </string>
    <string name="back">Back</string>
    <string name="check_box">CheckBox</string>
    <string name="radio_btn">RadioButton</string>
    <string name="start_chat">Start Chat</string>
    <string name="send_button">Send</string>
    <string name="linear_layout">Linear Layout\n</string>
    <string name="name">Name</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="dialog_title_toolbar">Do you want to go back?</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="my_name">Nisarg Bhalia</string>
    <string name="ver">Version 1.0</string>
</resources>